tests/baselines/reference/importNonExternalModule.errors.txt
foo_0.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
foo_1.ts(1,22): error TS2306: File 'foo_0.ts' is not a module.


==== foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
                         ~~~~~~~~~
!!! error TS2306: File 'foo_0.ts' is not a module.
    // Import should fail.  foo_0 not an external module
    if(foo.answer === 42){
    
    }
    
==== foo_0.ts (1 errors) ====
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var answer = 42;
    }
    